# targoov5

./: .gitignore  Cargo.toml  LICENSE  README.md  audit_fritz.py  generate_100.py  generate_500.py  generate_5000.py  generate_dach_csv.py  generate_data.py  generate_stress.py  stress_test_master.xlsx  targoo_dach_final_test.csv  targoo_stress_test.csv  test_100.csv  test_500.csv  test_5000.csv  test_analytics.csv  test_bench.csv  test_context.csv  test_direct_cat15.csv  test_elect.csv  test_hu.csv  test_ixbrl.csv  test_learn_final.csv  test_learning.csv  test_office.csv  test_pcaf.csv  test_unknown.csv  test_vegyi.csv  verify_package.py
ai/: bridge.py  build_index.py  dictionary.json  download_model.py  esg_index.json  generate_dictionary.py  requirements_ollama.txt  scope3_index.json  setup.sh
data/: dictionary.json
examples/: gen_stress_test.rs
frontend/: index.html
src/: aggregation.rs  ai_client.rs  api.rs  benchmark.rs  db.rs  eeio_engine.rs  gap_analysis.rs  gemini_client.rs  ingest.rs  ixbrl_mapper.rs  ledger.rs  lib.rs  main.rs  models.rs  output_factory.rs  physics.rs  scope3_classifier.rs  scope3_hybrid.rs  scope3_range.rs  supply_chain.rs  triage.rs  triage_context.rs
src/audit/: issa_5000.rs  mod.rs
src/benchmarking/: industry_averages.rs  mod.rs  peer_comparison.rs
src/compliance/: mod.rs  omnibus_validator.rs  reporting_scope.rs
src/eidas/: mod.rs
src/finance/: ai_resolver.rs  mod.rs  pcaf_attribution.rs  pcaf_data_quality.rs  pcaf_fluctuation.rs
targoo-frontend/: package-lock.json  package.json
tests/: regression_and_new_features.rs
(+25 files in other folders)
