[package]
name = "targoo-v2"
version = "0.1.0"
edition = "2021"
description = "Industrial ESG Data Refinery - GHG Protocol + CSRD/ESRS E1 compliant motor."
license = "Proprietary"
repository = "https://github.com/targoo/targoo-v2"
authors = ["Targoo Engineering"]

[dependencies]
# Core Async Runtime
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["multipart", "macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"] }

# Serialization & Data Formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# File Parsing & Generation
calamine = "0.24"
csv = "1.3"
rust_xlsxwriter = "0.70"
zip = { version = "0.6", features = ["deflate"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
strsim = "0.11"
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
